Sun Oct 19 17:11:21 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/FTRT_Event_Service/Readme: 
        * orbsvcs/orbsvcs/RTCosScheduling/README: Deleted these files and
	  moved them as part of release notes. See below.

	* docs/releasenotes/index.html: 
	* docs/releasenotes/rtc10_sched.html: 
	* docs/releasenotes/ftrt_ec.html: Added these to release notes.
	
Sun Oct 19 15:46:42 2003  Huang-Ming Huang  <hh1@cse.wustl.edu>

        * orbsvcs/orbsvcs/RTCosScheduling_Static.dsp:
        * orbsvcs/tests/RTCosScheduling/RTCosScheduling_Client_Static.dsp:
        * orbsvcs/tests/RTCosScheduling/RTCosScheduling_Server_Static.dsp:
          Changed the configuration name from Debug and Release to
          Static Debug and Static Release.

        * TAOACE_Static.dsw : Added RTCosScheduling_Static.dsp.

Sun Oct 19 07:34:16 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/tests/Notify/lib/Peer_T.cpp: Fixed unused arg warning.

Sat Oct 18 21:18:55 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/tests/Notify/lib/Peer_T.cpp: Fixed unused arg warning.
	* orbsvcs/orbsvcs/RTCosScheduling.dsp: Fixed path to idl compiler
	  for MSVC release configuration.

Sun Oct 19 02:02:27 UTC 2003 Kevin Bryan <bryank@cs.uri.edu>

	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_PCP_Manager.cpp:
	  Cast what ACE_Thread::self() returns to int to satisfy FreeBSD.

Sat Oct 18 17:02:49 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* TAOACE.dsw: Added RTCosScheduling.dsp.

Sat Oct 18 16:53:10 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/orbsvcs/RTCosScheduling.dsp: Modified include and
	  library paths.

Sat Oct 18 15:14:38 2003  George Edwards <g.edwards@vanderbilt.edu>

        * tests/OBV/Supports/Supports_Test_impl.h:
        * tests/OBV/Supports/Supports_Test_impl.cpp:

          Removed CORBA environment variable from factory methods.

Sat Oct 18 12:36:22 2003  Venkita Subramonian  <venkita@cs.wustl.edu>
