@@ -122,7 +122,7 @@ void ForwardCtrlServerInterceptor::receive_request (PortableInterceptor::ServerR
 
 void ForwardCtrlServerInterceptor::receive_request_service_contexts (
         PortableInterceptor::ServerRequestInfo_ptr
-        ACE_ENV_ARG_DECL)
+        ACE_ENV_ARG_DECL_NOT_USED)
       ACE_THROW_SPEC ((CORBA::SystemException,
                        PortableInterceptor::ForwardRequest))
 {
