@@ -26,7 +26,7 @@ vt_graph_impl::vt_graph_impl (int num_nodes ACE_ENV_ARG_DECL)
 }
 
 // Get the number of nodes in the vt_graph.
-CORBA::Long vt_graph_impl::size (ACE_ENV_SINGLE_ARG_DECL)
+CORBA::Long vt_graph_impl::size (ACE_ENV_SINGLE_ARG_DECL_NOT_USED)
   ACE_THROW_SPEC ((CORBA::SystemException))
 {
   return nodes_ ().length ();
@@ -34,7 +34,7 @@ CORBA::Long vt_graph_impl::size (ACE_ENV_SINGLE_ARG_DECL)
 
 // Add a node to the graph with no edges.
 void
-vt_graph_impl::add_node (const char * name ACE_ENV_ARG_DECL)
+vt_graph_impl::add_node (const char * name ACE_ENV_ARG_DECL_NOT_USED)
   ACE_THROW_SPEC ((CORBA::SystemException))
 {
   Supports_Test::Node * new_node = 0;
@@ -45,7 +45,7 @@ vt_graph_impl::add_node (const char * name ACE_ENV_ARG_DECL)
 
 // Print out information about each node.
 void
-vt_graph_impl::print (ACE_ENV_SINGLE_ARG_DECL)
+vt_graph_impl::print (ACE_ENV_SINGLE_ARG_DECL_NOT_USED)
   ACE_THROW_SPEC ((CORBA::SystemException))
 {
   cout << "Printing graph data..." << endl;
@@ -181,12 +181,12 @@ test_impl::pass_vt_graph_inout (
 }
 
 void
-test_impl::start (ACE_ENV_SINGLE_ARG_DECL) ACE_THROW_SPEC ((CORBA::SystemException))
+test_impl::start (ACE_ENV_SINGLE_ARG_DECL_NOT_USED) ACE_THROW_SPEC ((CORBA::SystemException))
 {
 }
 
 void
-test_impl::finish (ACE_ENV_SINGLE_ARG_DECL) ACE_THROW_SPEC ((CORBA::SystemException))
+test_impl::finish (ACE_ENV_SINGLE_ARG_DECL_NOT_USED) ACE_THROW_SPEC ((CORBA::SystemException))
 {
   this->_remove_ref ();
 }
@@ -201,15 +201,15 @@ node_impl::node_impl (void)
 // Initialize state.
 node_impl::node_impl (const char * name)
 {
-	name_ (name);
-	weight_ (0);
-	degree_ (0);
-	neighbors_ ().length (0);
+        name_ (name);
+        weight_ (0);
+        degree_ (0);
+        neighbors_ ().length (0);
 }
 
 // Add an edge from this node to neighbor.
 void
-node_impl::add_edge (Supports_Test::Node * neighbor ACE_ENV_ARG_DECL)
+node_impl::add_edge (Supports_Test::Node * neighbor ACE_ENV_ARG_DECL_NOT_USED)
     ACE_THROW_SPEC ((CORBA::SystemException))
 {
   degree_ (degree_ () + 1);
@@ -221,7 +221,7 @@ node_impl::add_edge (Supports_Test::Node * neighbor ACE_ENV_ARG_DECL)
 
 // Remove the edge from this node to neighbor.
 void
-node_impl::remove_edge (Supports_Test::Node * neighbor ACE_ENV_ARG_DECL)
+node_impl::remove_edge (Supports_Test::Node * neighbor ACE_ENV_ARG_DECL_NOT_USED)
     ACE_THROW_SPEC ((CORBA::SystemException))
 {
   for (unsigned int i = 0; i < neighbors_ ().length (); i++)
@@ -234,14 +234,14 @@ node_impl::remove_edge (Supports_Test::Node * neighbor ACE_ENV_ARG_DECL)
 }
 
 void
-node_impl::change_weight (CORBA::Long new_weight ACE_ENV_ARG_DECL)
+node_impl::change_weight (CORBA::Long new_weight ACE_ENV_ARG_DECL_NOT_USED)
     ACE_THROW_SPEC ((CORBA::SystemException))
 {
   weight_ (new_weight);
 }
 
 void
-node_impl::print (ACE_ENV_SINGLE_ARG_DECL)
+node_impl::print (ACE_ENV_SINGLE_ARG_DECL_NOT_USED)
     ACE_THROW_SPEC ((CORBA::SystemException))
 {
   cout << "  Name: " << name_ () << endl;
